third_party/rust/chromium_crates_io/vendor/cxx-1.0.150/tests/ui/const_fn.stderr
error: const extern function is not supported
 --> tests/ui/const_fn.rs:4:9
  |
4 |         const fn f();
  |         ^^^^^^^^^^^^^
